--- a/nvalt-proto/features.org
+++ b/nvalt-proto/features.org
@@ -63,3 +63,7 @@ Instead I should be able to say
    Clojure:
        Find the current Directory
        Parse a string for a regular Expression
+* Find References in Map                                            :clojure:
+<2016-03-15 Tue 08:07>
+
+
